Fix JSON extraction: use toy dataset with reliable ground truth
- CoNLL-2003 NER had noisy/incorrect labels (e.g. CHINA as person)
- Switch to toy dataset which has clean ground truth
- Re-run MLX and Ollama JSON benchmarks
- Results now make sense:
  - OpenAI: 100%, Ollama: 100%, vLLM: 90%, MLX: 40%

--- a/workloads/json_extraction/config.yaml
+++ b/workloads/json_extraction/config.yaml
@@ -1,8 +1,9 @@
 name: json_extraction
 
 # Available sources: toy (built-in), ner (CoNLL-2003 NER)
+# Note: toy dataset has cleaner ground truth; NER has noisy labels
 dataset:
-  source: ner
+  source: toy
   n_samples: 10
 
 generation:
