--- a/workloads/json_extraction/config.yaml
+++ b/workloads/json_extraction/config.yaml
@@ -1,15 +1,15 @@
 name: json_extraction
 
-# Available sources:
+# available sources:
 #   - toy: Built-in 10 samples (people/places/products) - clean ground truth
 #   - json_struct: HuggingFace MasterControlAIML/JSON-Unstructured-Structured
 #   - ner: CoNLL-2003 NER dataset (named entity extraction)
 #
-# Note: The toy dataset uses STRICT accuracy checking (90% exact match required)
+# note: The toy dataset uses STRICT accuracy checking (90% exact match required)
 # to better differentiate model quality. OpenAI typically scores 90%, local
 # models 60-80%. For harder evaluation, use "ner" or "json_struct".
 dataset:
-  source: toy  # Using toy for reliable accuracy; change to json_struct for HuggingFace
+  source: toy  # using toy for reliable accuracy; change to json_struct for HuggingFace
   n_samples: 10
 
 generation:
